Fixed Button Dark Mode issue

--- a/src/components/ResumeButton/ResumeButton.scss
+++ b/src/components/ResumeButton/ResumeButton.scss
@@ -35,3 +35,11 @@
   .icon-hover {
     color: #fff;
   }
+.icon-dark {
+    color: #fff;
+    // transition: color 0.3s ease;
+}
+
+.icon-hover-dark {
+      color: black;
+  }
